--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -27,8 +27,12 @@ body {
         height: 150px;
         border-radius: 30px;
         background-color: $darkSecondary;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         label {
-            height: 50px;
+            height: 30px;
+            //width: 200px;
             padding: 10px;
             border-radius: 10px;
             background-color: $lightSecondary;
@@ -37,7 +41,7 @@ body {
             cursor: pointer;
         }
         label:hover {
-            height: 50px;
+            height: 30px;
             padding: 10px;
             border-radius: 10px;
             background-color: $hoverSecondary;
@@ -48,17 +52,20 @@ body {
         input {
             display: none;
         }
+        span {
+            padding: 10px;
+        }
     }
 
     .tableContainer {
         margin: 30px;
-        background-color: $darkHover;
-        border-radius: 30px;
-        padding: 10px;
         thead {
             font-size: 20px;
             background-color: $darkSecondary;
             color: $lightSecondary;
+            th {
+                padding: 10px;
+            }
         }
         tbody {
             padding: 10px;
@@ -81,5 +88,18 @@ body {
                 background-color: $primary;
             }
         }
+
+        th:first-of-type {
+            border-top-left-radius: 20px;
+          }
+          th:last-of-type {
+            border-top-right-radius: 20px;
+          }
+          tr:last-of-type td:first-of-type {
+            border-bottom-left-radius: 20px;
+          }
+          tr:last-of-type td:last-of-type {
+            border-bottom-right-radius: 20px;
+          }
     }
 }
